[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/chararacters/enemies/boom/boom3.png" type="Texture" id=1]
[ext_resource path="res://assets/chararacters/enemies/boom/boom5.png" type="Texture" id=2]
[ext_resource path="res://assets/chararacters/enemies/boom/boom4.png" type="Texture" id=3]
[ext_resource path="res://assets/chararacters/enemies/boom/boom1.png" type="Texture" id=4]
[ext_resource path="res://assets/chararacters/enemies/boom/boom2.png" type="Texture" id=5]
[ext_resource path="res://scripts/enemies/bird.gd" type="Script" id=6]
[ext_resource path="res://assets/chararacters/enemies/bird/bird3.png" type="Texture" id=7]
[ext_resource path="res://assets/chararacters/enemies/bird/bird1.png" type="Texture" id=8]
[ext_resource path="res://assets/chararacters/enemies/bird/bird2.png" type="Texture" id=9]
[ext_resource path="res://assets/chararacters/enemies/bird/bird4.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "boom",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ) ],
"loop": true,
"name": "bird_move",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "bird_attack",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 4.17833

[sub_resource type="CircleShape2D" id=3]
radius = 3.47262

[sub_resource type="CircleShape2D" id=4]
radius = 10.6561

[sub_resource type="CircleShape2D" id=5]
radius = 11.068

[node name="Bird" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 6 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 2
position = Vector2( -2.36236, -9.92189 )
frames = SubResource( 1 )
animation = "bird_move"
frame = 2
playing = true

[node name="body" type="CollisionShape2D" parent="."]
light_mask = 2
position = Vector2( -1.62855, -9.11634 )
shape = SubResource( 2 )

[node name="top_checker" type="Area2D" parent="."]
light_mask = 2
collision_layer = 2
collision_mask = 9

[node name="top" type="CollisionShape2D" parent="top_checker"]
light_mask = 2
position = Vector2( -1.62523, -10.4228 )
shape = SubResource( 3 )

[node name="attack_checker" type="Area2D" parent="."]
light_mask = 2
collision_layer = 2

[node name="bite" type="CollisionShape2D" parent="attack_checker"]
light_mask = 2
position = Vector2( -1.78719, -10.2023 )
shape = SubResource( 4 )

[node name="Timer2" type="Timer" parent="."]

[node name="hit_checker" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_checker"]
position = Vector2( -1.81114, -9.84313 )
shape = SubResource( 5 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="top_checker" to="." method="_on_top_checker_area_entered"]
[connection signal="body_entered" from="top_checker" to="." method="_on_top_checker_body_entered"]
[connection signal="body_entered" from="attack_checker" to="." method="_on_attack_checker_body_entered"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="area_entered" from="hit_checker" to="." method="_on_hit_checker_area_entered"]
